Fix 'Irritating backup file modification time on Windows'

MS way to touch modification date of a copied file is to append '+nul'
to the source filename.

FIXED-IN:4.8.1
BUG:382293