kmymoney/kmymoney.cpp
@@ -2701,8 +2701,8 @@ bool KMyMoneyApp::slotBackupWriteFile()
   progressCallback(50, 0, i18n("Writing %1", backupfile));
   d->m_proc.clearProgram();
 #ifdef Q_OS_WIN
-  d->m_proc << "cmd.exe" << "/c" << "copy" << "/y";
-  d->m_proc << QDir::toNativeSeparators(d->m_fileName.path(KUrl::LeaveTrailingSlash)) << QDir::toNativeSeparators(backupfile);
+  d->m_proc << "cmd.exe" << "/c" << "copy" << "/b" << "/y";
+  d->m_proc << (QDir::toNativeSeparators(d->m_fileName.path(KUrl::LeaveTrailingSlash))+"+ nul") << QDir::toNativeSeparators(backupfile);
 #else
   d->m_proc << "cp" << "-f";
   d->m_proc << d->m_fileName.path(KUrl::LeaveTrailingSlash) << backupfile;
